--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,29 @@
   <head>
     <meta charset="utf-8" />
     <title>Realtime Node</title>
+    <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
   </head>
 
   <body>
     <p>
-      welcome to the chat app
+      welcome to the chat component
     </p>
+
+    <ol id="messages">
+
+    </ol>
+
+    <form id="message-form">
+      <input name="message" type="text" placeholder="Message"/>
+      <button>Send</button>
+    </form>
+    <button id="send-location">Send Location</button>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
+
   </body>
 </html>
