--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Realtime Node</title>
     <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -10,20 +11,31 @@
   crossorigin="anonymous"></script>
   </head>
 
-  <body>
-    <p>
-      welcome to the chat component
-    </p>
+  <body class="chat">
 
-    <ol id="messages">
+    <div class="chat__sidebar">
+      <h3>Users</h3>
+      <div id="users">
 
-    </ol>
+      </div>
+    </div>
+    <div class="chat__main">
+      <ol id="messages" class="chat__messages">
 
-    <form id="message-form">
-      <input name="message" type="text" placeholder="Message"/>
-      <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+      </ol>
+      <div class="chat__footer">
+        <form id="message-form">
+          <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+          <button>Send</button>
+        </form>
+        <button id="send-location">Send Location</button>
+      </div>
+
+
+    </div>
+
+
+
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
