--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
-
+    <script src="/js/libs/moment.js"></script>
   </body>
 </html>
