--- a/public/chat.html
+++ b/public/chat.html
@@ -63,6 +63,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
     <script src="/js/libs/moment.js"></script>
+    <script src="/js/libs/deparam.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.js"></script>
   </body>
 </html>
